src/test/ui/import3.stderr
error[E0432]: unresolved import `main`
  --> $DIR/import3.rs:2:5
   |
LL | use main::bar;
   |     ^^^^ maybe a missing crate `main`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
